[package]
name = "table-creator-macro2"
version = "0.2.5"
authors = ["Aran Z <heyaranzheng@hotmail.com>"]
edition = "2024"
license = "MIT"  
repository = "https://github.com/heyaranzheng/table-creator-macro2"
keywords = ["sql", "proc-macro", "database"]
description = "A simple macro to generate a specific sql when we have a structure."

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"



[features]
default = ["only-for-sqlite"]
only-for-postgres = []
only-for-sqlite = []