[package]
name = "gen-sql-statement"
version = "0.0.1"
authors = ["Aran Z <heyaranzheng@hotmail.com>"]
edition = "2024"
license = "MIT"  
repository = "https://github.com/heyaranzheng/gen-sql-statement"
keywords = ["sql","statement", "proc-macro", "database"]
description = "A simple macro to generate a specific SQL statement when we have a structure. Support SQLite first"

[dev-dependencies]
gen-sql-statement-trait = {version = "0.0.1", path = "../gen-sql-statement-trait"}
gen-sql-statement-derive = {version = "0.0.1", path = "../gen-sql-statement-derive"}


[features]
default = ["only-for-sqlite"]
#default = ["only-for-postgres"]

only-for-postgres = []
only-for-sqlite = []
